# trajectory-aware-gym

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  trajectory-aware-gym.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml  task.yml
.github/workflows/: ci.yml  require-pr.yml
docs/: configuration.md  fitness_and_adapter.md  fitness_objective_profile.md  gepa_optimizer_interface.md  integration_test_matrix.md  ollama_setup.md  phase2_handoff.md  phase3_raw_metrics.md
docs/01-references/: Capstone_proposal.md  GEM_paper.md  GEPA_paper.md
docs/02-architecture/: async_episode_loop_postmortem.md  configuration.md  fitness_and_adapter.md  fitness_objective_profile.md  logging-v2-plan.md  logging-v2-summary.md
docs/03-experiments/: baseline_evaluation_protocol.md  experiment_environments.md  phase3_raw_metrics.md  production_runner.md  publish_runner.md
docs/04-testing/: integration_test_matrix.md
docs/05-operations/: common_issues.md  ollama_setup.md
docs/06-handoffs/: phase2_handoff.md
docs/07-results/: README.md  summary.md
docs/07-results/orz57k-protocol-drift/: README.md
docs/08-writing/: README.md
experiments/configs/baselines/: grpo_codecontest.toml  grpo_hotpotqa.toml  grpo_math12k.toml  ppo_codecontest.toml  ppo_hotpotqa.toml  ppo_math12k.toml
experiments/hotpotqa/: config.yaml
experiments/hotpotqa-notool/: config.yaml
experiments/hotpotqa-tool/: config.yaml
experiments/math-dry-run/: config.yaml
experiments/orz57k/: config-l1.2-light.yaml  config.yaml
experiments/orz57k-local-preview/: config.yaml
experiments/orz57k-notool/: config.yaml
experiments/orz57k-smoke/: config.yaml
experiments/orz57k-tool/: config-qwen-ollama-light.yaml  config-qwen-ollama-medium.yaml  config.yaml
experiments/quick-test/: config.yaml
logs/: trajectory_20260402T230553Z_e6dd8980-635d-49a1-a931-36d6278416f3.json  trajectory_20260402T230628Z_60c8f4a6-947d-4e9a-b5f3-796263c8e56c.json  trajectory_20260402T230957Z_38c2f718-ac28-4225-a3c4-fb947eaa2a62.json  trajectory_20260403T024207Z_afd73272-642f-4638-9b0a-8fc85c00acef.json  trajectory_20260403T024218Z_56f02686-fbc9-4e08-805d-09037b8c1bce.json
logs/gepa-dry-run/: dry_run_summary.json
scripts/: collect_raw_metrics.py  debug_bedrock_connections.py  debug_bedrock_tool_use.py  diagnose_python_exec.py  list_bedrock_models.py  list_bedrock_profiles.py  migrate_json_to_sqlite.py  publish_run.py  run_experiment.py  run_gem_episode.py  run_gepa_dry_run.py  test_gem_env.py  upload_experiment_artifacts.py  verify_baseline_setup.py
scripts/notebooks/: test_bedrock.ipynb  test_gem_env.ipynb  test_ollama.ipynb
src/trajectory_aware_gym/: __init__.py
src/trajectory_aware_gym/adapters/: __init__.py  dspy_adapter.py  dspy_fitness_adapter.py  gem_env_factory.py  gem_episode_runner.py  gem_solver_module.py  tool_runtime.py  trajectory_logger.py
src/trajectory_aware_gym/config/: README.md  __init__.py  aws_config.py  baseline_config.py  core.py  llm_provider.py  ollama_config.py  settings.py  tools.yaml  trajectory-aware-gym.yaml
src/trajectory_aware_gym/experiments/: __init__.py  runner.py
tests/: conftest.py
tests/integration/: test_fitness_controlled_examples.py  test_fitness_validation.py  test_gem_episode_execution.py  test_system_pipeline.py  test_tool_agent_pipeline.py
tests/unit/: test_aws_config_clients.py  test_baseline_config.py  test_collect_raw_metrics_script.py  test_config.py  test_cost_normalization.py  test_dspy_fitness_adapter.py  test_experiment_runner.py  test_experiment_schema.py  test_fitness_composite.py  test_fitness_config.py  test_fitness_dspy_adapter.py  test_fitness_objective_profile.py  test_fitness_terms.py  test_fitness_types.py  test_gem_env_factory.py  test_gem_episode_runner.py  test_gem_solver_module.py  test_gepa_dry_run.py  test_gepa_gem_episode_runner_integration.py  test_gepa_optimizer.py  test_gepa_progress_patch.py  test_naming.py  test_package.py  test_python_exec.py  test_python_tool.py  test_raw_metrics.py  test_retry.py  test_run_gem_episode.py  test_run_report.py  test_s3_upload.py  test_search_tool.py  test_tool_runtime.py  test_trajectory_db.py  test_trajectory_fitness.py  test_trajectory_logger.py  test_upload_experiment_artifacts.py  test_verify_baseline_setup_script.py
(+22130 files in other folders)
